# riscv-trace-umd

./: README.md  pyproject.toml
lib/: mmio.c
patches/: 0001-riscv-asm-fix-EIC770X-sys-mem-port-conversion.patch  0001-riscv-dts-hifive-premier-p550-reserve-4g-for-trace-b.patch
rvtrace/: __main__.py  cli.py  device.py  encoder.py  funnel.py  helper.py  iommap.py  timestamp.py  topology.py
